coffee project initial todo's done. Working on bonuses

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 <body>
     <h1>Coffee!</h1>
 
+    <section id="searchBar">
+        <div>
+            <label for="userSearch">Search Coffee</label>
+            <input type="text" name="coffeeSearch" id="userSearch" placeholder="Enter Coffee">
+        </div>
+    </section>
+
     <form>
         <label for="roast-selection"></label>
         <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
+            <option>Light</option>
+            <option>Medium</option>
+            <option>Dark</option>
+            <option>All</option>
         </select>
-        <input id="submit" type="submit" />
     </form>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+
+    <section id="coffees"></section>
+
 
     <script src="main.js"></script>
 </body>
