fixed select functionality to work in conjunction with our search bar

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <option>Medium</option>
             <option>Dark</option>
         </select>
+        <input id="submit" type="submit" />
     </form>
 
     <section id="coffees"></section>
