added a function to add coffee and create a new coffee

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         </select>
     </form>
 
+    <form>
+        <label for="add-coffee">Add another Coffee</label>
+        <select id="add-coffee">
+            <option>All</option>
+            <option>Light</option>
+            <option>Medium</option>
+            <option>Dark</option>
+        </select>
+        <input type="text" id="newInput" placeholder="Add Coffee Here">
+
+        <input type="submit" id="submit">
+    </form>
+
     <section id="coffees"></section>
     <script src="main.js"></script>
 </body>
