Added css and bootstrap links to index.html

--- a/Issues-encountered.html
+++ b/Issues-encountered.html
@@ -6,7 +6,7 @@ display the filtered results by roast. For example our property value set
 for our object in our js file contained a lower case 'l' for light, whereas
 in our HTML Light contained an upper case 'L'.
 
-2.Local Storage -
+2.Local Storage - Had issues getting
 3.
 4.
 5.
