--- a/index.html
+++ b/index.html
@@ -9,9 +9,84 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/styleCoffee.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--START OF NAV BAR -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand text-muted" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link text-muted" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li>
+                <nav class="navbar navbar-light bg-light">
+                    <form class="form-inline">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Zip Code" aria-label="Search">
+                        <button class="btn btn-outline-secondary text-body bg-white my-2 my-sm-0" type="submit">Search
+                            stores near you!
+                        </button>
+                    </form>
+                </nav>
+            </li>
+            <li class="sign_up ml-auto d-flex align-items-center">
+                <i class="fas fa-user"></i>
+            </li>
+            <li class="sign_up d-flex align-items-center">
+                <a href="#" class="badge badge-light text-secondary">Sign up</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!--END OF NAV BAR-->
+<!--------JUMBOVIDEO--------->
+<header>
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="coffeebackgroundvid.mp4" type="video/mp4">
+    </video>
+    <div class="container h-100">
+        <div class="d-flex h-100 text-center align-items-center">
+            <div class="w-100 text-white">
+                <h1 class="display-3">COFFEE PLACE NAME</h1>
+                <p class="lead mb-0">#1 COFFEE</p>
+            </div>
+        </div>
+    </div>
+</header>
+
+<!---ENDOFJUMBOVIDEO--->
+<!---TABS----->
+<section class="my-5">
+    <div class="container">
+        <div class="row m-o">
+            <div class="col-md-12 d-flex justify-content-center">
+                <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab" role="tab" aria-controls="coffeesList" aria-selected="true"> <button type="button" class="btn topButtons"><img class='topButtons imgBack' alt='coffeebeans' src="coffeebeans.jpg"> Our Coffee</button></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab" aria-controls="locationsTab" aria-selected="false"><button type="button" class="btn topButtons"><img class='topButtons imgBack' alt='coffeebeans' src="coffeeMap.jpg">Locations</button></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab" aria-controls="contactTab" aria-selected="false"><button type="button" class="btn topButtons"><img class='topButtons imgBack' alt='coffeebeans' src="contact2.jpg">Contact Us</button></a>
+                    </li>
+            </div>
+        </div>
+    </div>
+</section>
+<!----END OF TABS---->
+
     <h1>Coffee!</h1>
 
     <section id="searchBar">
