--- a/index.html
+++ b/index.html
@@ -10,40 +10,41 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 </head>
 <body>
 <!--START OF NAV BAR -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand text-muted" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+
 
     <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
+        <ul class="navbar-nav w-100">
+            <li class="d-flex align-items-center">
+                <a class="navbar-brand text-muted" href="#">The Split Bean</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </li>
+            <li class="nav-item active d-flex align-items-center">
                 <a class="nav-link text-muted" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+            <li class="m-auto">
+                <!--Place Bean Img-->
+                <img src="nav-img.jpg" alt="coffee-img" class="w-75 rounded-circle">
             </li>
-            <li>
-                <nav class="navbar navbar-light bg-light">
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Zip Code" aria-label="Search">
-                        <button class="btn btn-outline-secondary text-body bg-white my-2 my-sm-0" type="submit">Search
-                            stores near you!
-                        </button>
-                    </form>
-                </nav>
-            </li>
-            <li class="sign_up ml-auto d-flex align-items-center">
-                <i class="fas fa-user"></i>
+            <li class="sign_up d-flex align-items-center">
+                <i class="fa fa-user fa-lg"></i>
             </li>
             <li class="sign_up d-flex align-items-center">
                 <a href="#" class="badge badge-light text-secondary">Sign up</a>
+            </li>
+            <li class="ml-3 d-flex align-items-center">
+                <i class="fa fa-mug-hot fa-lg"></i>
+            </li>
+            <li class="d-flex align-items-center">
+            <a href="#" class="badge badge-light text-secondary">Checkout</a>
             </li>
         </ul>
     </div>
@@ -58,8 +59,8 @@
     <div class="container h-100">
         <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
-                <h1 class="display-3">COFFEE PLACE NAME</h1>
-                <p class="lead mb-0">#1 COFFEE</p>
+                <h1 class="display-3">The Split Bean</h1>
+                <p class="lead mb-0">Artisan Coffee</p>
             </div>
         </div>
     </div>
@@ -81,12 +82,18 @@
                     <li class="nav-item">
                         <a class="nav-link" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab" aria-controls="contactTab" aria-selected="false"><button type="button" class="btn topButtons"><img class='topButtons imgBack' alt='coffeebeans' src="contact2.jpg">Contact Us</button></a>
                     </li>
+                </ul>
             </div>
         </div>
     </div>
 </section>
 <!----END OF TABS---->
-
+<div class="tab-pane fade show active" id="coffeeListTab" role="tabpanel" aria-labelledby="coffeeListTab">
+<!--    <div>-->
+<!--        <div>-->
+<!--            -->
+<!--        </div>-->
+<!--    </div>-->
     <h1>Coffee!</h1>
 
     <section id="searchBar">
@@ -118,6 +125,20 @@
         <input type="submit" id="submit">
     </form>
     <section id="coffees"></section>
+</div>
+
+<div class="tab-pane fade show active" role="tabpanel" aria-labelledby="locationsTab" id="locationsTab">
+
+</div>
+
+<div class="tab-pane fade show active" role="tabpanel" aria-labelledby="contactTab" id="contactTab">
+
+</div>
+
+
+
+
+
 
     <!-- Optional JavaScript -->
     <script src="main.js"></script>
