starting coffee tab

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!--            -->
 <!--        </div>-->
 <!--    </div>-->
-    <h1>Coffee!</h1>
+    <h1 class="d-flex justify-content-center">Coffee!</h1>
 
     <section id="searchBar">
         <div>
