--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     </div>
 </section>
 <!----END OF TABS---->
-<div class="container-fluid mb-5">
-    <div class="tab-pane fade show active row w-100 m-0" id="coffeeListTab" role="tabpanel"
+<!--<div class="container-fluid mb-5">-->
+    <div class="container-fluid tab-pane fade show active row w-100 m-0" id="coffeeListTab" role="tabpanel"
          aria-labelledby="coffeeListTab">
         <div class="d-flex col-6">
             <form class="mx-auto">
@@ -153,7 +153,7 @@
         </div>
 
     </div>
-</div>
+<!--</div>-->
 
 <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="locationsTab" id="locationsTab">
     <p>TAB2</p>
