changed navbar img and added css styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
             <li class="m-auto">
                 <!--Place Bean Img-->
-                <img src="nav-img.jpg" alt="coffee-img" class="w-75 rounded-circle">
+                <img src="navbar-img.jpg" alt="coffee-img" id="nav-img" class="rounded-circle">
             </li>
             <li class="sign_up d-flex align-items-center">
                 <i class="fa fa-user fa-lg"></i>
