added background img for coffees div

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </form>
         </div>
 
-        <div id="coffeeListBackground" class="container-fluid">
+        <div id="coffeeListBackground" class="blend1 container-fluid mx-5">
             <div class="row">
                 <div class="col px-5">
                     <section class="d-flex flex-wrap justify-content-around" id="coffees"></section>
