updated some colors and tabs

--- a/index.html
+++ b/index.html
@@ -75,26 +75,26 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
+                        <a class="nav-link active tabs rounded-circle" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
                            role="tab" aria-controls="coffeesList" aria-selected="true">
-                            <button type="button" class="btn topButtons"><img class='topButtons imgBack'
+                            <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="coffeebeans.jpg">
                                 Our Coffee
                             </button>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab"
+                        <a class="nav-link rounded-circle" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab"
                            aria-controls="locationsTab" aria-selected="false">
-                            <button type="button" class="btn topButtons"><img class='topButtons imgBack'
+                            <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="coffeeMap.jpg">Locations
                             </button>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab"
+                        <a class="nav-link rounded-circle" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab"
                            aria-controls="contactTab" aria-selected="false">
-                            <button type="button" class="btn topButtons"><img class='topButtons imgBack'
+                            <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="contact2.jpg">Contact
                                 Us
                             </button>
