working with background

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                         <a class="nav-link active tabs rounded-circle" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
                            role="tab" aria-controls="coffeesList" aria-selected="true">
                             <button type="button" class="btn topButtons"><img class='topButtons'
-                                                                              alt='coffeebeans' src="coffeebeans.jpg">
+                                                                              alt='coffeebeans' src="coffeebeans.jpg"><p class="mt-2">
                                 Our Coffee
+                            </p>
                             </button>
                         </a>
                     </li>
@@ -87,7 +88,7 @@
                         <a class="nav-link rounded-circle" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab"
                            aria-controls="locationsTab" aria-selected="false">
                             <button type="button" class="btn topButtons"><img class='topButtons'
-                                                                              alt='coffeebeans' src="coffeeMap.jpg">Locations
+                                                                              alt='coffeebeans' src="coffeeMap.jpg"><p class="mt-2">Locations</p>
                             </button>
                         </a>
                     </li>
@@ -95,8 +96,8 @@
                         <a class="nav-link rounded-circle" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab"
                            aria-controls="contactTab" aria-selected="false">
                             <button type="button" class="btn topButtons"><img class='topButtons'
-                                                                              alt='coffeebeans' src="contact2.jpg">Contact
-                                Us
+                                                                              alt='coffeebeans' src="contact2.jpg"><p class="mt-2">Contact
+                                Us</p>
                             </button>
                         </a>
                     </li>
