fixed top buttons and added bean in nav

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
             <li class="m-auto">
                 <!--Place Bean Img-->
-                <img src="navbar-img.jpg" alt="coffee-img" id="nav-img" class="rounded-circle">
+                <img src="coffeebean.png" alt="coffee-img" id="nav-img" class="rounded-circle">
             </li>
             <li class="sign_up d-flex align-items-center">
                 <i class="fa fa-user fa-lg"></i>
@@ -75,7 +75,7 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active tabs rounded-circle" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
+                        <a class="nav-link tabs rounded-circle" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
                            role="tab" aria-controls="coffeesList" aria-selected="true">
                             <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="coffeebeans.jpg"><p class="mt-2">
