made gitignore file

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link tabs rounded-circle" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
+                        <a class="btnLink nav-link tabs" id="coffeeList-tab" data-toggle="tab" href="#coffeeListTab"
                            role="tab" aria-controls="coffeesList" aria-selected="true">
                             <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="coffeebeans.jpg"><p class="mt-2">
@@ -85,7 +85,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link rounded-circle" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab"
+                        <a class="btnLink nav-link" id="locations-tab" data-toggle="tab" href="#locationsTab" role="tab"
                            aria-controls="locationsTab" aria-selected="false">
                             <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="coffeeMap.jpg"><p class="mt-2">Locations</p>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link rounded-circle" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab"
+                        <a class="btnLink nav-link" id="contactUs-tab" data-toggle="tab" href="#contactTab" role="tab"
                            aria-controls="contactTab" aria-selected="false">
                             <button type="button" class="btn topButtons"><img class='topButtons'
                                                                               alt='coffeebeans' src="contact2.jpg"><p class="mt-2">Contact
