--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Mapbox CSS -->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- Mapbox JS -->
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <!-- Mapbox Geocoder Util Methods -->
+    <script src="mapbox-geocoder-utils.js"></script>
+    <!---- link keys ---->
+    <script src="keys.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -157,7 +165,8 @@
 <!--</div>-->
 
 <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="locationsTab" id="locationsTab">
-    <p>TAB2</p>
+    <div id="map">
+    </div>
 </div>
 
 <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="contactTab" id="contactTab">
