--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
           integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3c4a7aa4f0.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 <!--START OF NAV BAR -->
@@ -118,10 +120,10 @@
     </div>
 </section>
 <!----END OF TABS---->
-<div class="tab-content m-0 p-0" id="myTabContent">
+<div class="tab-content my-0 p-0 mb-5" id="myTabContent">
     <!----OUR COFFEE TAB----->
 
-    <div class="container-fluid tab-pane fade row w-100 m-0" id="coffeeListTab" role="tabpanel"
+    <div class="container-fluid tab-pane fade row w-100 m-0 show active" id="coffeeListTab" role="tabpanel"
          aria-labelledby="coffeeListTab">
         <section class="tab-content" id="myTabContent1">
             <div class="tab-pane fade show active" role="tabpanel">
@@ -177,7 +179,7 @@
         </div>
     </div>
     <!---------CONTACT US TAB CONTENT------------->
-    <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="contactTab" id="contactTab">
+    <div class="tab-pane fade" role="tabpanel" aria-labelledby="contactTab" id="contactTab">
         <div class="container">
             <form class="mx-5">
                 <div class="d-flex justify-content-around">
@@ -217,6 +219,63 @@
         </div>
     </div>
 </div>
+
+
+<footer>
+    <div id="footer" class="container">
+        <section class="top-footer">
+            <div class="logo-div">
+                <h1><a href="#">The Split Bean</a></h1>
+                <p class="d-flex justify-content-center" href="#">Artisan Coffee</p>
+            </div>
+            <div class="number_add">
+                <ul>
+                    <li>+123 456 7890</li>
+                    <li>1234 Main Street Anywhere</li>
+                </ul>
+            </div>
+            <div class="social-media-links">
+                <a class="mx-1" href="#">
+                    <span class="icon-wrapper">
+                        <i class="fab fa-facebook-f"></i>
+                    </span>
+                </a>
+                <a class="mx-1" href="#">
+                    <span class="icon-wrapper">
+                        <i class="fab fa-twitter"></i>
+                    </span>
+                </a>
+                <a class="mx-1" href="#">
+                    <span class="icon-wrapper">
+                        <i class="fas fa-rss"></i>
+                    </span>
+                </a>
+                <a class="mx-1" href="#">
+                    <span class="icon-wrapper">
+                        <i class="fab fa-google-plus-g"></i>
+                    </span>
+                </a>
+                <a class="mx-1" href="#">
+                    <span class="icon-wrapper">
+                        <i class="fab fa-linkedin-in"></i>
+                    </span>
+                </a>
+            </div>
+        </section>
+        <div class="line"></div>
+        <section class="bottom-footer">
+            <ul class="bf_bar_info">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Page Layouts</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Stores</a></li>
+                <li>@Copyright. All rights reserved.</li>
+            </ul>
+
+        </section>
+    </div>
+</footer>
 
 
 <!-- Optional JavaScript -->
