--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
          aria-labelledby="coffeeListTab">
         <section class="tab-content" id="myTabContent1">
             <div class="tab-pane fade show active" role="tabpanel">
-                <div class="tab-pane d-flex col-6">
-                    <form class="mx-auto">
+                <div>
+                    <form class="">
+                        <div class="">
                         <label for="roast-selection">Filter Roast</label>
                         <select id="roast-selection">
                             <option>All</option>
@@ -136,12 +137,13 @@
                             <option>Medium</option>
                             <option>Dark</option>
                         </select>
-                        <section id="searchBar">
+                        </div>
+<!--                        <div class="" id="searchBar">-->
                             <div>
                                 <label for="userSearch">Search Coffee</label>
                                 <input type="text" name="coffeeSearch" id="userSearch" placeholder="Enter Coffee">
                             </div>
-                        </section>
+<!--                        </div>-->
                     </form>
                 </div>
 
@@ -185,12 +187,12 @@
                 <div class="d-flex justify-content-around">
                 <div class="form-group ">
                     <label for="exampleFormControlInput1">First Name</label>
-                    <input type="email" class="form-control" id=""
+                    <input type="email" class="form-control"
                            placeholder="First Name">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Last Name</label>
-                    <input type="email" class="form-control" id=""
+                    <input type="email" class="form-control"
                            placeholder="Last Name">
                 </div>
                 </div>
