--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
           integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3c4a7aa4f0.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Work+Sans&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <!--START OF NAV BAR -->
@@ -127,42 +128,41 @@
          aria-labelledby="coffeeListTab">
         <section class="tab-content" id="myTabContent1">
             <div class="tab-pane fade show active" role="tabpanel">
-                <div>
-                    <form class="">
-                        <div class="">
-                        <label for="roast-selection">Filter Roast</label>
-                        <select id="roast-selection">
-                            <option>All</option>
-                            <option>Light</option>
-                            <option>Medium</option>
-                            <option>Dark</option>
-                        </select>
-                        </div>
-<!--                        <div class="" id="searchBar">-->
+                <div class="d-flex">
+                    <div class="d-flex col-6 justify-content-center">
+                        <form>
+                            <div>
+                                <label for="roast-selection">Filter Roast</label>
+                                <select id="roast-selection">
+                                    <option>All</option>
+                                    <option>Light</option>
+                                    <option>Medium</option>
+                                    <option>Dark</option>
+                                </select>
+                            </div>
                             <div>
                                 <label for="userSearch">Search Coffee</label>
                                 <input type="text" name="coffeeSearch" id="userSearch" placeholder="Enter Coffee">
                             </div>
-<!--                        </div>-->
-                    </form>
-                </div>
+                        </form>
+                    </div>
 
-                <div class="d-flex col-6">
-                    <form class="mx-auto">
-                        <label for="add-coffee">Filter Roast</label>
-                        <select id="add-coffee">
-                            <option>All</option>
-                            <option>Light</option>
-                            <option>Medium</option>
-                            <option>Dark</option>
-                        </select>
-                        <div>
-                            <input type="text" id="newInput" placeholder="Add Coffee Here">
-                            <input type="submit" id="submit">
-                        </div>
-                    </form>
+                    <div class="d-flex col-6 justify-content-center">
+                        <form>
+                            <label for="add-coffee">Filter Roast</label>
+                            <select id="add-coffee">
+                                <option>All</option>
+                                <option>Light</option>
+                                <option>Medium</option>
+                                <option>Dark</option>
+                            </select>
+                            <div>
+                                <input type="text" id="newInput" placeholder="Add Coffee Here">
+                                <input type="submit" id="submit">
+                            </div>
+                        </form>
+                    </div>
                 </div>
-
                 <div id="coffeeListBackground" class="blend1 container-fluid">
                     <div class="row">
                         <div class="col px-5">
@@ -185,16 +185,16 @@
         <div class="container">
             <form class="mx-5">
                 <div class="d-flex justify-content-around">
-                <div class="form-group ">
-                    <label for="exampleFormControlInput1">First Name</label>
-                    <input type="email" class="form-control"
-                           placeholder="First Name">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Last Name</label>
-                    <input type="email" class="form-control"
-                           placeholder="Last Name">
-                </div>
+                    <div class="form-group ">
+                        <label for="exampleFormControlInput1">First Name</label>
+                        <input type="email" class="form-control"
+                               placeholder="First Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Last Name</label>
+                        <input type="email" class="form-control"
+                               placeholder="Last Name">
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Email address</label>
